adding 7zip(wip), right-click menu to download folder in UI

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
 
 		<div class="breadcrumbs"></div>
 
+		<div class="context-menu"><span>Download Zip</span></div>
 		<ul class="data"></ul>
 
 		<div class="nothingfound">
